# combustion_toolbox

./: .gitignore  .readthedocs.yml  CITATION.cff  CODE_OF_CONDUCT.md  CONTENTS.m  CONTRIBUTING.md  CONTRIBUTORS.md  CalculateProductsCC.m  CalculateProductsCC_2.m  CalculateProductsCC_eps.m  CalculateProductsCC_while.m  CalculateProductsCC_while_2.m  CalculateProductsIC.m  CalculateProductsIC_03_06_2019.m  CalculateProductsIC_test.m  Combustion Toolbox 2019b.prj  Combustion Toolbox.mlappinstall.REMOVED.git-id  Combustion Toolbox.prj  Combustion_Toolbox.asv  Combustion_Toolbox.m  Combustion_Toolbox_App.mlapp  Combustion_Toolbox_explosives.m  Combustion_Toolbox_setPath.m  Contributors  Copy_of_Combustion_Toolbox_App.mlapp  DesktopToolset.xml  INSTALL.m  Initialize.m  NO_Zeldovich.m  NO_mechanism.m  OPTIMIZATION_SUMMARY.md  P1_m2i.m  PERFORMANCE_IMPROVEMENTS.md  README.md  SolveProblemDET_Jouget_inloop.m  SolveProblemDET_OVERDRIVEN.m  SolveProblemDET_hybrid_main.m  SolveProblemEV.m  SolveProblemHP.m  SolveProblemHP_EV_fast.m  (+26 more)
Databases/: DB.mat.REMOVED.git-id  DB_master.mat  DB_master_reduced.mat  combustionToolboxAir.mat  generate_DB_Theo.m  generate_strTheo.m  strMaster.mat  strThProp.mat  strThProp.mat.REMOVED.git-id  strThProp_hydrogen_air_complete.mat  strTheo.mat  thermo.inp  thermo_NASA.inp  thermo_RPA.inp  thermo_millenium_2_thermoNASA9.inp  thermo_millennium.inp
Display/: display_Tp_phi.m  displaysweepresults.m  plot_density_YFuel.m  plot_density_phi.m  plot_heatrelease_YFuel.m  plot_heatrelease_phi.m
Examples/: Example_DET.m  Example_DET_OBLIQUE.m  Example_DET_R.m  (+54 more)
(+2628 files in other folders)
