[build-system]
requires = [
    "flit_core >=3.4,<4",
    "wheel",
]
build-backend = "flit_core.buildapi"

[project]
name = "combustion_toolbox"
readme = "README.md"
authors = [{name = "Alberto Cuadra Lara", email = "acuadra@ing.uc3m.es"}]
dynamic = ["version", "description"]

[project.optional-dependencies]
dev = [
    "furo",
    "hypothesis",
    "myst-parser",
    "sphinx",
]
doc = [
    "furo",
    "myst-parser",
    "sphinx~=4.3.0",
]