[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "combustion_toolbox"
readme = "README.md"
authors = [{name = "Alberto Cuadra Lara", email = "acuadra@ing.uc3m.es"}]
dynamic = ["version", "description"]

[project.optional-dependencies]
doc = [
    "sphinx~=4.4.0",
    "furo",
    "myst-parser",
]